[package]
name = "chungustrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chungus-server"
path = "src/server.rs"


[[bin]]
name = "chungus-client"
path = "src/client.rs"

[dependencies]
axum = "0.8.4"
bollard = "0.19.2"
bollard-stubs = "=1.49.0-rc.28.3.3"
dotenv = "0.15.0"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[build-dependencies]
tonic-prost-build = "0.14.2"
